# ossim-helloworld-plugin

./: CMakeLists.txt  README.md
src/: ossimPluginInit.cpp
